@@ -52,9 +52,6 @@ VDIFDataStream::VDIFDataStream(const Configuration * conf, int snum, int id, int
 {
 	int perr;
 
-	//each data buffer segment contains an integer number of frames, because thats the way config determines max bytes
-	lastconfig = -1;
-
 	// switched power output assigned a name based on the datastream number (MPIID-1)
 	int spf_Hz = conf->getDSwitchedPowerFrequency(id-1);
 	if(spf_Hz > 0)
@@ -921,169 +918,5 @@ void VDIFDataStream::diskToMemory(int buffersegment)
 				delete_mark5_stream(m5stream);
 			}
                 }
-	}
-}
-
-void VDIFDataStream::loopfileread()
-{
-	int perr;
-	int numread = 0;
-
-	//lock the outstanding send lock
-	perr = pthread_mutex_lock(&outstandingsendlock);
-	if(perr != 0)
-	{
-		csevere << startl << "Error in initial readthread lock of outstandingsendlock!" << endl;
-	}
-
-	//lock the first section to start reading
-	dataremaining = false;
-	keepreading = true;
-	while(!dataremaining && keepreading)
-	{
-		openfile(bufferinfo[0].configindex, filesread[bufferinfo[0].configindex]++);
-		if(!dataremaining)
-		{
-			closefile();
-		}
-	}
-
-	if(keepreading)
-	{
-		diskToMemory(numread++);
-		diskToMemory(numread++);
-		lastvalidsegment = numread;
-		perr = pthread_mutex_lock(&(bufferlock[numread]));
-		if(perr != 0)
-		{
-			csevere << startl << "Error in initial readthread lock of first buffer section!" << endl;
-		}
-	}
-	else
-	{
-		csevere << startl << "Couldn't find any valid data; will be shutting down gracefully!" << endl;
-	}
-	readthreadstarted = true;
-	perr = pthread_cond_signal(&initcond);
-	if(perr != 0)
-	{
-		csevere << startl << "Datastream readthread error trying to signal main thread to wake up!" << endl;
-	}
-	if(keepreading)
-	{
-		diskToMemory(numread++);
-	}
-
-	while(keepreading && (bufferinfo[lastvalidsegment].configindex < 0 || filesread[bufferinfo[lastvalidsegment].configindex] <= confignumfiles[bufferinfo[lastvalidsegment].configindex]))
-	{
-		while(dataremaining && keepreading)
-		{
-			lastvalidsegment = (lastvalidsegment + 1)%numdatasegments;
-
-			//lock the next section
-			perr = pthread_mutex_lock(&(bufferlock[lastvalidsegment]));
-			if(perr != 0)
-			{
-				csevere << startl << "Error in readthread lock of buffer section!" << lastvalidsegment << endl;
-			}
-
-			if(!isnewfile) //can unlock previous section immediately
-			{
-				//unlock the previous section
-				perr = pthread_mutex_unlock(&(bufferlock[(lastvalidsegment-1+numdatasegments)% numdatasegments]));    
-				if(perr != 0)
-				{
-					csevere << startl << "Error (" << perr << ") in readthread unlock of buffer section!" << (lastvalidsegment-1+numdatasegments)%numdatasegments << endl;
-				}
-			}
-
-			//do the read
-			diskToMemory(lastvalidsegment);
-			numread++;
-
-			if(isnewfile) //had to wait before unlocking file
-			{
-				//unlock the previous section
-				perr = pthread_mutex_unlock(&(bufferlock[(lastvalidsegment-1+numdatasegments)% numdatasegments]));
-				if(perr != 0)
-				{
-					csevere << startl << "Error (" << perr << ") in readthread unlock of buffer section!" << (lastvalidsegment-1+numdatasegments)%numdatasegments << endl;
-				}
-			}
-			isnewfile = false;
-		}
-		if(keepreading)
-		{
-			closefile();
-
-			//if we need to, change the config
-			int nextconfigindex = config->getScanConfigIndex(readscan);
-			while(nextconfigindex < 0 && readscan < model->getNumScans())
-			{
-				readseconds = 0; 
-				nextconfigindex = config->getScanConfigIndex(++readscan);
-			}
-			if(readscan == model->getNumScans())
-			{
-				bufferinfo[(lastvalidsegment+1)%numdatasegments].scan = model->getNumScans()-1;
-				bufferinfo[(lastvalidsegment+1)%numdatasegments].scanseconds = model->getScanDuration(model->getNumScans()-1);
-				bufferinfo[(lastvalidsegment+1)%numdatasegments].scanns = 0;
-				keepreading = false;
-			}
-			else
-			{
-				if(config->getScanConfigIndex(readscan) != bufferinfo[(lastvalidsegment + 1)%numdatasegments].configindex)
-				{
-					updateConfig((lastvalidsegment + 1)%numdatasegments);
-				}
-				//if the datastreams for two or more configs are common, they'll all have the same 
-				//files.  Therefore work with the lowest one
-				int lowestconfigindex = bufferinfo[(lastvalidsegment+1)%numdatasegments].configindex;
-				for(int i=config->getNumConfigs()-1;i>=0;i--)
-				{
-					if(config->getDDataFileNames(i, streamnum) == config->getDDataFileNames(lowestconfigindex, streamnum))
-					lowestconfigindex = i;
-				}
-				openfile(lowestconfigindex, filesread[lowestconfigindex]++);
-				bool skipsomefiles = (config->getScanConfigIndex(readscan) < 0)?true:false;
-				while(skipsomefiles)
-				{
-					int nextscan = peekfile(lowestconfigindex, filesread[lowestconfigindex]);
-					if(nextscan == readscan || (nextscan == readscan+1 && config->getScanConfigIndex(nextscan) < 0))
-					{
-						openfile(lowestconfigindex, filesread[lowestconfigindex]++);
-					}
-					else
-					{
-						skipsomefiles = false;
-					}
-				}
-			}
-		}
-	}
-	closefile();
-	if(numread > 0)
-	{
-		perr = pthread_mutex_unlock(&(bufferlock[lastvalidsegment]));
-		if(perr != 0)
-		{
-			csevere << startl << "Error (" << perr << ") in readthread unlock of buffer section!" << lastvalidsegment << endl;
-		}
-	}
-
-	//unlock the outstanding send lock
-	perr = pthread_mutex_unlock(&outstandingsendlock);
-	if(perr != 0)
-	{
-		csevere << startl << "Error (" << perr << ") in readthread unlock of outstandingsendlock!" << endl;
-	}
-
-	if(lastvalidsegment >= 0)
-	{
-		cverbose << startl << "Datastream readthread is exiting! Filecount was " << filesread[bufferinfo[lastvalidsegment].configindex] << ", confignumfiles was " << confignumfiles[bufferinfo[lastvalidsegment].configindex] << ", dataremaining was " << dataremaining << ", keepreading was " << keepreading << endl;
-	}
-	else
-	{
-		cverbose << startl << "Datastream readthread is exiting, after not finding any data at all!" << endl;
 	}
 }
